--- a/dashboard.html
+++ b/dashboard.html
@@ -4,38 +4,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Digital</title>
-    <link rel="stylesheet" href="dashboard.css">
-    <script type="module" src="firebase.js"></script>
-    <script type="module" src="dashboard.js"></script>
+    <link rel="stylesheet" href="dashboard.css?v=202511101600">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+    <script type="module" src="firebase.js?v=202511101600"></script>
+    <script type="module" src="dashboard.js?v=202511101600"></script>
 </head>
 <body>
     <header>
         <h1>Agenda Digital</h1>
         <div id="user-info">
             <span id="user-name"></span>
-            <button id="logout-btn">Logout</button>
+            <button id="export-btn" aria-label="Exportar dados"><i class="fas fa-download"></i> Exportar</button>
+            <button id="import-btn" aria-label="Importar dados"><i class="fas fa-upload"></i> Importar</button>
+            <input type="file" id="import-file" accept=".json" style="display: none;">
+            <button id="theme-toggle" aria-label="Alternar tema"><i class="fas fa-moon"></i></button>
+            <button id="logout-btn" aria-label="Sair da conta"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </div>
     </header>
     <main>
         <section id="calendar-section">
-            <h2>Calendário</h2>
+            <h2><i class="fas fa-calendar-alt"></i> Calendário</h2>
+            <div id="calendar-header">
+                <button id="prev-month" aria-label="Mês anterior"><i class="fas fa-chevron-left"></i></button>
+                <h3 id="current-month-year"></h3>
+                <button id="next-month" aria-label="Próximo mês"><i class="fas fa-chevron-right"></i></button>
+            </div>
             <div id="calendar"></div>
         </section>
         <section id="tasks-section">
-            <h2>Lista de Tarefas</h2>
+            <h2><i class="fas fa-tasks"></i> Lista de Tarefas</h2>
+            <div id="task-search">
+                <input type="text" id="search-input" placeholder="Buscar tarefas..." aria-label="Buscar tarefas">
+                <i class="fas fa-search"></i>
+            </div>
             <div id="task-form">
-                <input type="text" id="task-input" placeholder="Nova tarefa">
-                <input type="date" id="task-date">
-                <button id="add-task-btn">Adicionar</button>
+                <label for="task-input" class="sr-only">Nova tarefa</label>
+                <input type="text" id="task-input" placeholder="Nova tarefa" aria-label="Digite uma nova tarefa">
+                <label for="task-date" class="sr-only">Data da tarefa</label>
+                <input type="date" id="task-date" aria-label="Selecione a data da tarefa">
+                <select id="task-priority" aria-label="Prioridade da tarefa">
+                    <option value="low">Baixa</option>
+                    <option value="medium" selected>Média</option>
+                    <option value="high">Alta</option>
+                </select>
+                <select id="task-category" aria-label="Categoria da tarefa">
+                    <option value="pessoal">Pessoal</option>
+                    <option value="trabalho" selected>Trabalho</option>
+                    <option value="estudos">Estudos</option>
+                    <option value="saude">Saúde</option>
+                    <option value="outros">Outros</option>
+                </select>
+                <button id="add-task-btn" aria-label="Adicionar nova tarefa"><i class="fas fa-plus"></i> Adicionar</button>
+            </div>
+            <div id="task-filters">
+                <button id="filter-all" class="filter-btn active">Todas</button>
+                <button id="filter-pending" class="filter-btn">Pendentes</button>
+                <button id="filter-completed" class="filter-btn">Concluídas</button>
+                <select id="category-filter" class="filter-btn" aria-label="Filtrar por categoria">
+                    <option value="all">Todas as Categorias</option>
+                    <option value="pessoal">Pessoal</option>
+                    <option value="trabalho">Trabalho</option>
+                    <option value="estudos">Estudos</option>
+                    <option value="saude">Saúde</option>
+                    <option value="outros">Outros</option>
+                </select>
             </div>
             <ul id="task-list"></ul>
         </section>
         <section id="gamification-section">
-            <h2>Gamificação</h2>
-            <div id="points">Pontos: <span id="points-value">0</span></div>
-            <div id="level">Nível: <span id="level-value">1</span></div>
-            <div id="badges">Emblemas: <span id="badges-list"></span></div>
+            <h2><i class="fas fa-trophy"></i> Gamificação</h2>
+            <div id="gamification-stats">
+                <div id="points">Pontos: <span id="points-value">0</span></div>
+                <div id="level">Nível: <span id="level-value">1</span></div>
+                <div id="badges">Emblemas: <span id="badges-list"></span></div>
+            </div>
+            <div id="progress-bar">
+                <div id="progress-fill"></div>
+            </div>
+        </section>
+        <section id="notes-section">
+            <h2><i class="fas fa-sticky-note"></i> Notas Rápidas</h2>
+            <div id="note-form">
+                <textarea id="note-input" placeholder="Digite uma nota rápida..." rows="3"></textarea>
+                <button id="add-note-btn"><i class="fas fa-plus"></i> Adicionar Nota</button>
+            </div>
+            <div id="notes-list"></div>
         </section>
     </main>
+
+    <!-- Modal para tarefas do dia -->
+    <div id="task-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="modal-date"></h3>
+                <span class="modal-close">&times;</span>
+            </div>
+            <div id="modal-tasks"></div>
+        </div>
+    </div>
 </body>
 </html>
