--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="module" src="firebase.js"></script>
     <script type="module" src="auth.js"></script>
 </head>
@@ -30,7 +31,7 @@
                     </label>
                     <a href="">Esqueceu a Senha?</a>
                 </div>
-                <button type="submit">Entrar</button>
+                <button type="submit"><i class="fas fa-sign-in-alt"></i> Entrar</button>
             </form>
             <p>Não tenho uma conta. <a href="register.html">Criar Conta</a></p>
         </div>
