--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="module" src="firebase.js"></script>
     <script type="module" src="auth.js"></script>
 </head>
@@ -32,7 +33,7 @@
                     <label for="confirm-password">Confirmar Senha:</label>
                     <input type="password" id="confirm-password" placeholder="Confirme sua senha" required>
                 </div>
-                <button type="submit">Criar Conta</button>
+                <button type="submit"><i class="fas fa-user-plus"></i> Criar Conta</button>
             </form>
             <p>Já tenho uma conta. <a href="login.html">Login</a></p>
         </div>
